[metadata]
name = cloudharness-django
version = 0.1
description = A Django app to use various CloudHarness services, e.g. the keycloak server
long_description = A Django app to use various CloudHarness services, e.g. the keycloak server
author = Zoran Sinnema
author_email = zoran@metacell.us
license = BSD-3-Clause 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django>=4.0.7
    django-admin-extra-buttons>=1.4.2
    psycopg2-binary==2.9.3
    Pillow==9.2.0
    python-keycloak
